Move play2.6 tests out of subproject and into sourceSet